# functional-programming-in-c-plus-plus-2130085

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
src/chapters/chapter_0/: .gitignore  CMakeLists.txt  main.cpp
src/chapters/chapter_1/: CMakeLists.txt  README.md
src/chapters/chapter_1/final_src/: accumulate.cpp
src/chapters/chapter_1/src/: bind_partial_application.cpp  challenge_factorial_accumulate.cpp  lambda_transform.cpp  ranges_transform.cpp
src/chapters/chapter_10/: CMakeLists.txt  README.md
src/chapters/chapter_10/src/: blending_functional_imperative.cpp  challenge_functional_refactor.cpp  func_pipe_loops.cpp  hybrid_programming_style.cpp  immutable_data_structures.cpp  immutable_shared.cpp  refactor_imperative_to_functional.cpp
src/chapters/chapter_10/src/finished/: challenge_functional_refactor.cpp  hybrid_programming_style.cpp
src/chapters/chapter_10/src/start/: func_pipe_loops.cpp  immutable_shared.cpp
src/chapters/chapter_2/: CMakeLists.txt  README.md
src/chapters/chapter_2/src/: challenge_multiply.cpp  combining_concepts.cpp  concepts_vs_sfinae.cpp  constrained_auto.cpp  direct_constraints.cpp  iterable_concept.cpp  requires_clause.cpp
src/chapters/chapter_3/: CMakeLists.txt  README.md
src/chapters/chapter_3/src/: challenge_pipeline.cpp  filter_transform_pipeline.cpp  lazy_fibonacci_coroutine.cpp  multi_range.cpp  transform_pipeline.cpp
src/chapters/chapter_4/: CMakeLists.txt  README.md
src/chapters/chapter_4/src/: challenge_constexpr_factorial.cpp  constexpr_factorial.cpp  constexpr_fibonacci.cpp  constexpr_matrix_multiplication.cpp  recursive_factorial_template.cpp
src/chapters/chapter_5/: CMakeLists.txt  README.md
src/chapters/chapter_5/src/: challenge_function_pipeline.cpp  function_composition.cpp  modular_composition.cpp  move_only_function.cpp  real_world_higher_order.cpp
src/chapters/chapter_6/: CMakeLists.txt  README.md
src/chapters/chapter_6/src/: boost_hana_tuple.cpp  challenge_fibonacci_boost_hana.cpp  challenge_stl_hana_pipeline.cpp  combining_boost_hana.cpp
src/chapters/chapter_6/src/begin/: challenge_stl_hana_pipeline.cpp
src/chapters/chapter_6/src/finished/: boost_hana_tuple.cpp  stl_ranges_filter.cpp  stl_transform_accumulate.cpp
src/chapters/chapter_7/: CMakeLists.txt  README.md
src/chapters/chapter_7/src/: challenge_word_frequency.cpp  functional_async_event_handling.cpp  realtime_data_stream.cpp  rxcpp_coroutine_ranges.cpp  rxcpp_simple_stream.cpp
src/chapters/chapter_7/src/finished/: functional_async_event_handling.cpp
src/chapters/chapter_8/: CMakeLists.txt  README.md
src/chapters/chapter_8/src/: basic_pattern_matching.cpp  challenge_adaptive_processor.cpp  challenge_expression_evaluator.cpp  pattern_matching_clarity.cpp  real_world_variant.cpp  type_specific_overloads.cpp  variant_pattern_matching.cpp  visit_example.cpp
src/chapters/chapter_8/src/finished/: challenge_adaptive_processor.cpp  real_world_variant.cpp
src/chapters/chapter_8/src/start/: pattern_matching_clarity.cpp  variant_pattern_matching copy.cpp  visit_example.cpp
src/chapters/chapter_9/: CMakeLists.txt  README.md
src/chapters/chapter_9/src/: async_task_launch.cpp  async_timer.cpp  challenge_async_lambdas.cpp  challenge_async_task_manager.cpp  concurrent_tasks_functional.cpp  coroutine_lazy_sequence.cpp  coroutines_lazy_evaluation.cpp  lazy_sequence_generator.cpp
src/chapters/chapter_9/src/finished/: async_task_launch.cpp  concurrent_tasks_functional.cpp
src/chapters/chapter_9/src/start/: challenge_async_lambdas.cpp  coroutines_lazy_evaluation.cpp  lazy_sequence_generator.cpp
